// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sunday Times magazine section 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#000000",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "flex": 1,
              "height": 733.7,
              "opacity": 1,
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <ResponsiveImage
            style={
              Object {
                "width": 750,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.6)",
                "borderRadius": 9999,
                "bottom": 20,
                "position": "absolute",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "letterSpacing": 0.3,
                  "paddingHorizontal": 13,
                  "paddingVertical": 8,
                }
              }
            >
              Tap image to view full magazine cover
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <Standard />
    </View>
  </View>
</RCTScrollView>
`;

exports[`Times magazine section 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#000000",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#000000",
              "flex": 1,
              "height": 733.7,
              "opacity": 1,
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <ResponsiveImage
            style={
              Object {
                "width": 750,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.6)",
                "borderRadius": 9999,
                "bottom": 20,
                "position": "absolute",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "letterSpacing": 0.3,
                  "paddingHorizontal": 13,
                  "paddingVertical": 8,
                }
              }
            >
              Tap image to view full magazine cover
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <Standard />
    </View>
  </View>
</RCTScrollView>
`;

exports[`puzzle bar with more than one puzzle 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 1,
      "borderColor": "#DBDBDB",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#1D1D1B",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 20,
      }
    }
  >
    3
     recently opened puzzle
    s
  </Text>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 5,
      }
    }
  >
    <IconForwardArrow />
  </View>
</View>
`;

exports[`puzzle bar with no puzzles 1`] = `null`;

exports[`puzzle bar with one puzzle 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 1,
      "borderColor": "#DBDBDB",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#1D1D1B",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 20,
      }
    }
  >
    1
     recently opened puzzle
  </Text>
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingTop": 5,
      }
    }
  >
    <IconForwardArrow />
  </View>
</View>
`;

exports[`section item separator - huge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
      "marginHorizontal": 113,
    }
  }
/>
`;

exports[`section item separator - medium 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
      "marginHorizontal": 40,
    }
  }
/>
`;

exports[`section item separator - small 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
      "marginHorizontal": 0,
    }
  }
/>
`;

exports[`section item separator - wide 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#DBDBDB",
      "height": 1,
      "marginHorizontal": 50,
    }
  }
/>
`;

exports[`section page 1`] = `
<RCTScrollView>
  <View>
    <View>
      <LeadOneAndFour />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <LeadOneFullWidthSlice />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <LeadOneAndOne />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <LeadOneAndTwoSlice />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <LeadTwoNoPicAndTwo />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`should render Secondary 2 No Pic and 2 instead of Secondary 2 and 2 for tablet 1`] = `
<RCTScrollView>
  <View>
    <View>
      <SecondaryTwoNoPicAndTwo />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <SecondaryTwoNoPicAndTwo />
    </View>
  </View>
</RCTScrollView>
`;

exports[`should render secondary 2 and 2 for mobile (small breakpoint) 1`] = `
<RCTScrollView>
  <View>
    <View>
      <SecondaryTwoAndTwo />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
              "marginHorizontal": 0,
            }
          }
        />
      </View>
    </View>
    <View>
      <SecondaryTwoNoPicAndTwo />
    </View>
  </View>
</RCTScrollView>
`;
